// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots from strings Snapshot shape: diff 1`] = `
Array [
  SnapshotDiff {
    "diff": "  default:   

  removed: -   Array<i32> [1, 2, 3]

  added: +   Vec3 {
    x: 1.0,
    y: 2.0,
    z: 3.0,
  }

",
    "groupName": "group 1",
    "left": "
  Array<i32> [1, 2, 3]
",
    "right": "
  Vec3 {
    x: 1.0,
    y: 2.0,
    z: 3.0,
  }
",
    "snapshotName": "snapshot 1",
    "testName": "test 1",
    "type": 3,
  },
]
`;

exports[`Snapshots from strings Snapshot shape: diff 2`] = `
Array [
  SnapshotDiff {
    "diff": "  removed: - testValue
  added: + testValue5
",
    "groupName": "group1",
    "left": "testValue",
    "right": "testValue5",
    "snapshotName": "snapshot1",
    "testName": "test1",
    "type": 3,
  },
  SnapshotDiff {
    "diff": "  removed: - testValue2
  added: + testValue6
",
    "groupName": "group1",
    "left": "testValue2",
    "right": "testValue6",
    "snapshotName": "snapshot2",
    "testName": "test1",
    "type": 3,
  },
  SnapshotDiff {
    "diff": "  removed: - testValue3
  added: + testValue7
",
    "groupName": "group2",
    "left": "testValue3",
    "right": "testValue7",
    "snapshotName": "snapshot1",
    "testName": "test1",
    "type": 3,
  },
  SnapshotDiff {
    "diff": null,
    "groupName": "group2",
    "left": "testValue4",
    "right": null,
    "snapshotName": "snapshot2",
    "testName": "test1",
    "type": 1,
  },
  SnapshotDiff {
    "diff": null,
    "groupName": "group4",
    "left": "testValue7",
    "right": null,
    "snapshotName": "snapshot1",
    "testName": "test1",
    "type": 1,
  },
  SnapshotDiff {
    "diff": null,
    "groupName": "group4",
    "left": "testValue8",
    "right": null,
    "snapshotName": "snapshot3",
    "testName": "test1",
    "type": 1,
  },
  SnapshotDiff {
    "diff": null,
    "groupName": "group2",
    "left": null,
    "right": "testValue8",
    "snapshotName": "snapshot3",
    "testName": "test1",
    "type": 2,
  },
  SnapshotDiff {
    "diff": null,
    "groupName": "group3",
    "left": null,
    "right": "testValue7",
    "snapshotName": "snapshot1",
    "testName": "test1",
    "type": 2,
  },
  SnapshotDiff {
    "diff": null,
    "groupName": "group3",
    "left": null,
    "right": "testValue8",
    "snapshotName": "snapshot3",
    "testName": "test1",
    "type": 2,
  },
]
`;

exports[`Snapshots from strings Snapshot shape: diff 3`] = `
Array [
  SnapshotDiff {
    "diff": null,
    "groupName": "group1",
    "left": "testValue9",
    "right": null,
    "snapshotName": "snapshot5",
    "testName": "test1",
    "type": 1,
  },
  SnapshotDiff {
    "diff": null,
    "groupName": "group1",
    "left": null,
    "right": "testValue9",
    "snapshotName": "snapshot5",
    "testName": "test2",
    "type": 2,
  },
]
`;

exports[`Snapshots from strings Snapshot shape: fromdata 1`] = `
Snapshot {
  "data": Object {
    "group1": Object {
      "test1": Object {
        "snapshot1": "testValue",
        "snapshot2": "testValue2",
      },
    },
    "group2": Object {
      "test1": Object {
        "snapshot1": "testValue3",
        "snapshot2": "testValue4",
      },
    },
    "group4": Object {
      "test1": Object {
        "snapshot1": "testValue7",
        "snapshot3": "testValue8",
      },
    },
  },
  "stringified": "exports[\`group1\`][\`test1\`][\`snapshot1\`] = \`testValue\`

exports[\`group1\`][\`test1\`][\`snapshot2\`] = \`testValue2\`

exports[\`group2\`][\`test1\`][\`snapshot1\`] = \`testValue3\`

exports[\`group2\`][\`test1\`][\`snapshot2\`] = \`testValue4\`

exports[\`group4\`][\`test1\`][\`snapshot1\`] = \`testValue7\`

exports[\`group4\`][\`test1\`][\`snapshot3\`] = \`testValue8\`

",
}
`;

exports[`Snapshots from strings Snapshot shape: fromdata 2`] = `
Snapshot {
  "data": Object {
    "group1": Object {
      "test1": Object {
        "snapshot1": "testValue5",
        "snapshot2": "testValue6",
      },
    },
    "group2": Object {
      "test1": Object {
        "snapshot1": "testValue7",
        "snapshot3": "testValue8",
      },
    },
    "group3": Object {
      "test1": Object {
        "snapshot1": "testValue7",
        "snapshot3": "testValue8",
      },
    },
  },
  "stringified": "exports[\`group1\`][\`test1\`][\`snapshot1\`] = \`testValue5\`

exports[\`group1\`][\`test1\`][\`snapshot2\`] = \`testValue6\`

exports[\`group2\`][\`test1\`][\`snapshot1\`] = \`testValue7\`

exports[\`group2\`][\`test1\`][\`snapshot3\`] = \`testValue8\`

exports[\`group3\`][\`test1\`][\`snapshot1\`] = \`testValue7\`

exports[\`group3\`][\`test1\`][\`snapshot3\`] = \`testValue8\`

",
}
`;

exports[`Snapshots from strings Snapshot shape: fromstring 1`] = `
Snapshot {
  "data": Object {
    "group 1": Object {
      "test 1": Object {
        "snapshot 1": "
  Array<i32> [1, 2, 3]
",
      },
    },
  },
  "stringified": "
exports[\`group 1\`][\`test 1\`][\`snapshot 1\`] = \`
  Array<i32> [1, 2, 3]
\`;
",
}
`;

exports[`Snapshots from strings Snapshot shape: fromstring 2`] = `
Snapshot {
  "data": Object {
    "group 1": Object {
      "test 1": Object {
        "snapshot 1": "
  Vec3 {
    x: 1.0,
    y: 2.0,
    z: 3.0,
  }
",
      },
    },
  },
  "stringified": "
exports[\`group 1\`][\`test 1\`][\`snapshot 1\`] = \`
  Vec3 {
    x: 1.0,
    y: 2.0,
    z: 3.0,
  }
\`;
",
}
`;
